# feedo

./: AGENTS.md  Cargo.toml  README.md
.claude/: README.md
.claude/skills/: async-rust.md  feed-parsing.md  rust-tui.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  deploy-website.yml  release.yml
src/: credentials.rs  error_report.rs  lib.rs  main.rs  update.rs
src/app/: mod.rs
src/config/: data.rs  mod.rs
src/feed/: cache.rs  discovery.rs  item.rs  manager.rs  mod.rs  parser.rs
src/opml/: mod.rs
src/sync/: client.rs  manager.rs  mod.rs  types.rs
src/theme/: mod.rs
src/ui/: input.rs  mod.rs  render.rs  state.rs
src/ui/widgets/: mod.rs
tape/: feedo-add-feed.tape  feedo-main.tape  feedo-search.tape
website/: astro.config.mjs  package-lock.json  package.json
website/public/: CNAME  llms.txt  robots.txt  sitemap.xml
website/public/.well-known/: llms.txt
website/src/layouts/: Layout.astro
website/src/pages/: docs.astro  index.astro  themes.astro
website/src/styles/: global.css
