[package]
name = "feedo"
version = "1.1.18"
edition = "2024"
rust-version = "1.85"
authors = ["Ricardo Dantas"]
description = "A stunning terminal RSS reader - like Reeder, but for your terminal 🐕"
license = "MIT"
repository = "https://github.com/ricardodantas/feedo"
homepage = "https://github.com/ricardodantas/feedo"
keywords = ["rss", "tui", "terminal", "reader", "feed"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# RSS/Atom parsing
feed-rs = "2.3"

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["rustls", "charset", "form", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# XML for OPML
quick-xml = { version = "0.39", features = ["serialize"] }

# Error handling
thiserror = "2.0"
color-eyre = "0.6"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
open = "5.3"
regex-lite = "0.1"
unicode-width = "0.2"
textwrap = "0.16"
html-escape = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"
arboard = "3.6.1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
